# UOM_IN1100_C

./: CMakeLists.txt
Lab5Exercise2/: lab5_ex2_q1.c  lab5_ex2_q2.c  lab5_ex2_q3.c  lab5_ex2_q4.c  lab5_ex2_q5.c  lab5_ex2_q6.c  lab5_ex2_q7.c  lab5_ex2_q8.c  lab5_ex2_q9.c
Lab6Q1/: lab6_ex_q1_a.c
SirTheory/: 2darray1.c  2darray2.c  area.h  array1.c  array2.c  function1.c  macroex1.c  macros1.c  string1.c  structex1.c  structure1.c  unionex1.c
activitySheet4/: ex1.c  ex2.c  ex3.c
activitySheet5/: ex2.c  ex4.c  sheet6ex1.c  sheet6ex2.c  sheet6ex3.c  sheet6ex4.c
akilasirTheory/: array1.c  breakEx.c  ex1.c  ex2.c  gotoEx.c  pointer1.c  structure1.c
assignments/: 204236M.c  assignment1.c  harsagama.c  test.c
hackerRank/: test.c
lab10/: ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex6Sir.c  ex7.c  ex7Sir.c
lab11/: ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c
lab12/: ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  pointersEx1.c  pointersEx2.c  unionsExercise.c
lab13/: ex1.c  ex2.c  ex7.c  ex8.c
lab14/: q1.c  q2.c  q3.c  q4.c
lab6/: lab6_q3.c  lab6_q5.c  lab6_q8_a.c  lab6_q8_b.c  lab6_q8_d.c
lab7/: q10.c  q11.c  q12.c  q13.c  q14.c  q15.c  q16.c  q17.c  q17sirCopy.c  q18.c  q1_a.c  q1_b.c  q1_c.c  q1_d.c  q1_e.c  q1_f.c  q1_g.c  q1_h.c  q2.c  q3.c  q4.c  q5.c  q6_a.c  q6_b.c  q6_c.c  q6_d.c  q7.c  q8.c  q9.c
lab8/: ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  funcPassbyReference.c
pastPapers/: b18paper.c
