cmake_minimum_required(VERSION 3.20)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c)
add_executable(lab5_ex2_q2 Lab5Exercise2/lab5_ex2_q2.c)
add_executable(lab5_ex2_q4 Lab5Exercise2/lab5_ex2_q4.c)
add_executable(lab6_ex_q1_a Lab6Q1/lab6_ex_q1_a.c)
add_executable(lab5_ex2_q1 Lab5Exercise2/lab5_ex2_q1.c)
add_executable(lab5_ex2_q3 Lab5Exercise2/lab5_ex2_q3.c)
add_executable(lab5_ex2_q5 Lab5Exercise2/lab5_ex2_q5.c)
add_executable(lab5_ex2_q6 Lab5Exercise2/lab5_ex2_q6.c)
add_executable(lab5_ex2_q7 Lab5Exercise2/lab5_ex2_q7.c)
add_executable(lab5_ex2_q8 Lab5Exercise2/lab5_ex2_q8.c)
add_executable(lab5_ex2_q9 Lab5Exercise2/lab5_ex2_q9.c)
add_executable(function1 SirTheory/function1.c)
add_executable(activitySheet4ex1 activitySheet4/ex1.c)
add_executable(activitySheet4ex2 activitySheet4/ex2.c)
add_executable(activitySheet4ex3 activitySheet4/ex3.c)
add_executable(lab6q3 lab6/lab6_q3.c)
add_executable(lab6q5 lab6/lab6_q5.c)
add_executable(lab6q8a lab6/lab6_q8_a.c)
add_executable(lab6q8b lab6/lab6_q8_b.c)
add_executable(lab6q8d lab6/lab6_q8_d.c)
add_executable(lab7q1a lab7/q1_a.c)
add_executable(lab7q1b lab7/q1_b.c)
add_executable(lab7q1c lab7/q1_c.c)
add_executable(lab7q1d lab7/q1_d.c)
add_executable(lab7q1e lab7/q1_e.c)
add_executable(lab7q1f lab7/q1_f.c)
add_executable(lab7q1g lab7/q1_g.c)
add_executable(lab7q1h lab7/q1_h.c)
add_executable(lab7q2 lab7/q2.c)
add_executable(lab7q3 lab7/q3.c)
add_executable(lab7q4 lab7/q4.c)
add_executable(lab7q5 lab7/q5.c)
add_executable(lab7q6a lab7/q6_a.c)
add_executable(lab7q6b lab7/q6_b.c)
add_executable(lab7q6c lab7/q6_c.c)
add_executable(lab7q6d lab7/q6_d.c)
add_executable(lab7q7 lab7/q7.c)
add_executable(lab7q8 lab7/q8.c)
add_executable(lab7q9 lab7/q9.c)
add_executable(lab7q10 lab7/q10.c)
add_executable(lab7q11 lab7/q11.c)
add_executable(lab7q12 lab7/q12.c)
add_executable(lab7q13 lab7/q13.c)
add_executable(lab7q14 lab7/q14.c)
add_executable(lab7q15 lab7/q15.c)
add_executable(lab7q16 lab7/q16.c)
add_executable(lab7q17 lab7/q17.c)
add_executable(lab7q17sir lab7/q17sirCopy.c)
add_executable(lab7q18 lab7/q18.c)
add_executable(array1 SirTheory/array1.c)
add_executable(array2 SirTheory/array2.c)
add_executable(2darray1 SirTheory/2darray1.c)
add_executable(2darray2 SirTheory/2darray2.c)
add_executable(activitySheet5ex2 activitySheet5/ex2.c)
add_executable(activitySheet5ex4 activitySheet5/ex4.c)
add_executable(activitySheet6ex1 activitySheet5/sheet6ex1.c)
add_executable(activitySheet6ex2 activitySheet5/sheet6ex2.c)
add_executable(activitySheet6ex3 activitySheet5/sheet6ex3.c)
add_executable(activitySheet6ex4 activitySheet5/sheet6ex4.c)
add_executable(lab8funcpr lab8/funcPassbyReference.c)
add_executable(lab8ex1 lab8/ex1.c)
add_executable(lab8ex2 lab8/ex2.c)
add_executable(lab8ex3 lab8/ex3.c)
add_executable(lab8ex4 lab8/ex4.c)
add_executable(lab8ex5 lab8/ex5.c)
add_executable(lab8ex6 lab8/ex6.c)
add_executable(akilasirTheory1 akilasirTheory/ex1.c)
add_executable(akilasirTheory2 akilasirTheory/ex2.c)
add_executable(akilasirTheory3 akilasirTheory/gotoEx.c)
add_executable(akilasirTheory4 akilasirTheory/breakEx.c)
add_executable(akilasirTheory5 akilasirTheory/array1.c)
add_executable(akilasirTheory6 akilasirTheory/structure1.c)
add_executable(lab10ex1 lab10/ex1.c)
add_executable(lab10ex2 lab10/ex2.c)
add_executable(lab10ex3 lab10/ex3.c)
add_executable(lab10ex4 lab10/ex4.c)
add_executable(lab10ex5 lab10/ex5.c)
add_executable(lab10ex6 lab10/ex6.c)
add_executable(lab10ex6sir lab10/ex6Sir.c)
add_executable(lab10ex7sir lab10/ex7Sir.c)
add_executable(lab10ex7 lab10/ex7.c)
add_executable(SirTheorystr1 SirTheory/string1.c)
add_executable(lab11ex1 lab11/ex1.c)
add_executable(lab11ex2 lab11/ex2.c)
add_executable(lab11ex3 lab11/ex3.c)
add_executable(lab11ex4 lab11/ex4.c)
add_executable(lab11ex5 lab11/ex5.c)
add_executable(lab11ex6 lab11/ex6.c)
add_executable(lab12ex1 lab12/ex1.c)
add_executable(lab12ex2 lab12/ex2.c)
add_executable(lab12ex3 lab12/ex3.c)
add_executable(lab12ex4 lab12/ex4.c)
add_executable(lab12ex5 lab12/ex5.c)
add_executable(lab12UnionsExercise lab12/unionsExercise.c)
add_executable(SirTheorystructure1 SirTheory/structure1.c)
add_executable(SirTheorystructex1 SirTheory/structex1.c)
add_executable(SirTheoryunionex1 SirTheory/unionex1.c)
add_executable(assignments assignments/assignment1.c)
add_executable(assignmentsharas assignments/harsagama.c)
add_executable(assignmentstest2 assignments/204236M.c)
add_executable(assignmentstest3 assignments/test.c)
